fixed header on mobile

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -31,10 +31,11 @@
     }
 
     .header__icons {
+        position: absolute;
         @include flexbox(row, space-around, center);
         width: 15vh;
-        top: 10px;
-        left: 10px;
+        top: 20px;
+        right: 10px;
         margin: 0 6px;
         color: #3d3d3d;
 
@@ -93,6 +94,10 @@
 
         .container{
             align-self: flex-start;
+        }
+
+        .header__icons{
+            align-self: flex-end;
         }
 
     }
